--- a/model.html
+++ b/model.html
@@ -1,25 +1,25 @@
-<html>
+<!DOCTYPE html>
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>Hello, world!</title>
 	<!-- include three.js library -->
-	<script src='three.js'></script>
-	<script src='OBJLoader.js'></script>
-	<script src='MTLLoader.js'></script>
+	<script src='https://stemkoski.github.io/AR-Examples/js/three.js'></script>
+	<script src='https://stemkoski.github.io/AR-Examples/js/OBJLoader.js'></script>
+	<script src='https://stemkoski.github.io/AR-Examples/js/MTLLoader.js'></script>
 	<!-- include jsartookit -->
-	<script src="artoolkit.min.js"></script>
-	<script src="artoolkit.api.js"></script>
+	<script src="https://stemkoski.github.io/AR-Examples/jsartoolkit5/artoolkit.min.js"></script>
+	<script src="https://stemkoski.github.io/AR-Examples/jsartoolkit5/artoolkit.api.js"></script>
 	<!-- include threex.artoolkit -->
-	<script src="threex-artoolkitsource.js"></script>
-	<script src="threex-artoolkitcontext.js"></script>
-	<script src="threex-arbasecontrols.js"></script>
-	<script src="threex-armarkercontrols.js"></script>
+	<script src="https://stemkoski.github.io/AR-Examples/threex/threex-artoolkitsource.js"></script>
+	<script src="https://stemkoski.github.io/AR-Examples/threex/threex-artoolkitcontext.js"></script>
+	<script src="https://stemkoski.github.io/AR-Examples/threex/threex-arbasecontrols.js"></script>
+	<script src="https://stemkoski.github.io/AR-Examples/threex/threex-armarkercontrols.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
 <!-- 
-  Example created by Lee Stemkoski: https://github.com/stemkoski https://mamboleoo.be/learnThree/demos/
+  Example created by Lee Stemkoski: https://github.com/stemkoski
   Based on the AR.js library and examples created by Jerome Etienne: https://github.com/jeromeetienne/AR.js/
 -->
 
@@ -94,7 +94,7 @@ function initialize()
 
 	// create atToolkitContext
 	arToolkitContext = new THREEx.ArToolkitContext({
-		cameraParametersUrl: 'camera_para.dat',
+		cameraParametersUrl: 'https://stemkoski.github.io/AR-Examples/data/camera_para.dat',
 		detectionMode: 'mono'
 	});
 	
@@ -111,7 +111,7 @@ function initialize()
 	markerRoot1 = new THREE.Group();
 	scene.add(markerRoot1);
 	let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-		type: 'pattern', patternUrl: "patt.hiro",
+		type: 'pattern', patternUrl: "https://stemkoski.github.io/AR-Examples/data/hiro.patt",
 	})
 
 	let geometry1 = new THREE.PlaneBufferGeometry(1,1, 4,4);
@@ -140,8 +140,6 @@ function initialize()
 					markerRoot1.add(mesh0);
 				}, onProgress, onError );
 		});
-
- 
 }
 
 
