--- a/demo/WEB3DAR.html
+++ b/demo/WEB3DAR.html
@@ -19,7 +19,7 @@
 	<h3 align="center" style="font-family: ">WEB3D&AR (DEMO APP)</h3>
 <table border="0" width="100%">
 	<tr>
-		<td style="width: 50%;">
+		<td style="width: 50%;height: 560px">
 			<model-viewer class="animal" src="models/scene.glb" ar alt="A 3D model of an tiger" auto-rotate camera-controls>
 			</model-viewer>
 			<button slot="ar-button" id="ar-button" style="background: grey;position: absolute; border-radius: 4px;border: none;top: 10.5% ;padding: 6px; right: 51%;">
